# minizip

./: .gitignore  CMakeLists.txt  MZPlatformCompatability.h  README.md  compat_header.h.in  crypt.h  error.c  error.cpp  error.h  ioapi.c  ioapi.h  iowin32.h  minizip.c  mz_os_win32.c  mz_strm_split.c  mz_strm_zlib.c  mz_zip.c  mz_zip_rw.c  mzexport.h  mztools.c  mztools.h  unzip.c  unzip.h  zip.c  zip.h
minizip/: unzip.c  zip.c
minizip.xcodeproj/: project.pbxproj
